--- a/HotelBookingApp/AvailableHotels.xaml
+++ b/HotelBookingApp/AvailableHotels.xaml
@@ -5,32 +5,79 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelBookingApp"
         mc:Ignorable="d"
-        Title="AvailableHotels" Name="ViewHotels" Height="600" Width="1200" WindowStartupLocation="CenterScreen">
+        Title="Hotels" Name="ViewHotels"
+        Height="600"
+        Width="1000"
+        WindowStartupLocation="CenterScreen"
+       
+        FontFamily="HotelBookingApp;component/Resources/#Dosis">
     <Grid>
+
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="57*"/>
-            <ColumnDefinition Width="241*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
+
         <Grid.RowDefinitions>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition/>
+            <RowDefinition Height="100"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="35" Content="Hotels"  Grid.Column="1" Margin="238,12,466,12"/>
-        <Button CommandParameter="{Binding ElementName=ViewHotels}" FontSize="30" Grid.Row="0" Margin="20,10,0,10" Command="{Binding MainMenuClick,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Content="Main menu" Width="190" HorizontalAlignment="Left" Click="Button_Click"/>
 
-        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="35" Content="{Binding HotelExtra,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Row="1" FontWeight="Bold" Grid.Column="1" Margin="363,35,591,35"/>
+        <Grid Background="#FF4EDAF9"
+              Grid.ColumnSpan="3"
+              Panel.ZIndex="-2">
 
-        <DataGrid SelectedItem="{Binding SelectedHotel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding Hotels, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Margin="20" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" Name="dgHotels" Grid.ColumnSpan="2">
+        </Grid>
+
+        <StackPanel Grid.Row="0"
+                    Grid.Column="1"
+                    Margin="0 5 0 0">
+
+            <Label HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontSize="35"
+                   Content="Hotels"
+                   Foreground="White"/>
+
+            <TextBlock Text="List of our current hotels"
+                       FontSize="22"
+                       HorizontalAlignment="Center"
+                       Foreground="White"/>
+
+        </StackPanel>
+
+        <Image Source="Resources/hotelbed.jpg"
+               Panel.ZIndex="-1"
+               Grid.Row="1"
+               Grid.Column="0"
+               Grid.ColumnSpan="3"
+               Grid.RowSpan="3"
+               Stretch="UniformToFill">
+        </Image>
+
+        <DataGrid SelectedItem="{Binding SelectedHotel,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                  ItemsSource="{Binding Hotels, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                  AutoGenerateColumns="False"
+                  Background="White"
+                  CanUserAddRows="False"
+                  CanUserDeleteRows="False"
+                  Name="dgHotels"
+                  Grid.Row="1"
+                  Grid.ColumnSpan="3"
+                  Grid.RowSpan="2"
+                  Margin="60 20 60 -30">
             <DataGrid.Columns>
-                <DataGridTextColumn Width="*" Visibility="Hidden" Foreground="Black" Header="ID" Binding="{Binding EmployeeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <DataGridTextColumn Width="*" Foreground="Black" Header="Hotel Name" Binding="{Binding HotelName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <DataGridTextColumn Width="*" Foreground="Black" Header="Rating" Binding="{Binding Rating, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <DataGridTextColumn Width="*" Foreground="Black" Header="City" Binding="{Binding City, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <DataGridTextColumn Width="*" Foreground="Black" Header="Country" Binding="{Binding Country, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <!--<DataGridTextColumn Width="*" Foreground="Black" Header="Number Of Rooms" Binding="{Binding NumberOfRooms, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
-                <!--<DataGridTextColumn Width="*" Foreground="Black" Header="Available" Binding="{Binding IsAvailable, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
-                <DataGridTemplateColumn Header="Action" Width="*">
+                <DataGridTextColumn Width="*" Visibility="Hidden" Header="ID" Binding="{Binding EmployeeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Width="*" Header="Hotel Name" Binding="{Binding HotelName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Width="80" Header="Rating" Binding="{Binding Rating, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Width="*" Header="City" Binding="{Binding City, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Width="*" Header="Country" Binding="{Binding Country, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <!--<DataGridTextColumn Width="80" Header="Rooms" Binding="{Binding NumberOfRooms, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Width="80" Header="Available" Binding="{Binding IsAvailable, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
+                <DataGridTemplateColumn Width="80" Header="Action">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <Button Content="View Rooms" Click="ViewRooms_Click"/>
@@ -40,6 +87,45 @@
             </DataGrid.Columns>
 
         </DataGrid>
+
+        <Button CommandParameter="{Binding ElementName=ViewHotels}"
+                FontSize="20"
+                Grid.Row="3"
+                Grid.Column="1"
+                Margin="60 50 60 50"
+                Command="{Binding MainMenuClick,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                Content="Main menu"
+                Click="Button_Click">
+
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="TextElement.FontFamily" Value="/HotelBookingApp;component/Resources/#Dosis"/>
+                    <Setter Property="Background" Value="#FF4EDAF9"/>
+                    <Setter Property="Cursor" Value="Hand"/>
+
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="#FFA2CFE4"/>
+                        </Trigger>
+                    </Style.Triggers>
+
+                </Style>
+            </Button.Style>
+
+            <Button.Template>
+                <ControlTemplate TargetType="Button">
+                    <Border Width="160" Height="40"
+                                CornerRadius="12"
+                                Background="{TemplateBinding Background}">
+
+                        <ContentPresenter VerticalAlignment="Center"
+                                              HorizontalAlignment="Center"/>
+
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+
+        </Button>
 
     </Grid>
 </Window>
