--- a/HotelBookingApp/ViewHotelRooms.xaml
+++ b/HotelBookingApp/ViewHotelRooms.xaml
@@ -5,32 +5,88 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HotelBookingApp"
         mc:Ignorable="d"
-        Title="ViewHotelRooms" Height="600" Width="1000">
+        Title="ViewHotelRooms" Height="600" Width="1000"
+        
+        FontFamily="Resources/#Dosis">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="80"/>
-            <RowDefinition Height="40"/>
-            <RowDefinition Height="80"/>
-            <RowDefinition/>
+            <RowDefinition Height="130"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="35" Content="View hotelrooms" />
 
-        <Label Grid.Row="1" Content="Start date :" HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Center" FontSize="20" Width="120"/>
-        <DatePicker Grid.Row="1" HorizontalAlignment="Left" Margin="190,0,0,0" VerticalAlignment="Center" FontSize="20" Width="190" SelectedDate="{Binding SelectedStartDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
-        
-        <Label Grid.Row="1" Content="End date :" HorizontalAlignment="Center" Margin="130,0,0,0" VerticalAlignment="Center" FontSize="20" Width="120"/>
-        <DatePicker Grid.Row="1" HorizontalAlignment="Right" Margin="0,0,100,0" VerticalAlignment="Center" FontSize="20" Width="190" SelectedDate="{Binding SelectedEndDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-        <Label Grid.Row="2" Content="Extra service :" HorizontalAlignment="Left" Margin="100,0,0,0" VerticalAlignment="Center" FontSize="20" Width="220"/>
-        <ComboBox SelectedItem="{Binding SelectedExtra, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Width="250" Height="40" FontSize="25" ItemsSource="{Binding Extras, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="ExtraDescription" SelectedValuePath="Id"/>
+        <Grid Grid.Column="0"
+              Grid.ColumnSpan="3"
+              Background="#FFF7718F"/>
 
-        <DataGrid SelectedItem="{Binding SelectedRoom,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" ItemsSource="{Binding Rooms, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Margin="20" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" Name="dgHotelRooms">
+
+        <StackPanel Grid.Column="1">
+
+            <Label HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   FontSize="36"
+                   Margin="0 10 0 0"
+                   Content="Hotelrooms" />
+            <TextBlock Text="Select wich room you would like to book"
+                       FontSize="24"
+                       TextWrapping="Wrap"
+                       HorizontalAlignment="Center"
+                       TextAlignment="Center" FontFamily="/HotelBookingApp;component/Resources/#Dosis" Margin="-68,0,-80,0" Width="479" RenderTransformOrigin="0.114,0.446"/>
+        </StackPanel>
+
+
+        <StackPanel Grid.Row="1"
+                    Grid.ColumnSpan="1"
+                    Grid.RowSpan="3"
+                    HorizontalAlignment="Center"
+                    Orientation="Vertical" Margin="10,0"
+                    Width="311">
+
+            <Label Content="Start date"
+                   HorizontalAlignment="Center"
+                   Margin="0 10 0 5"
+                   FontSize="24"/>
+
+            <DatePicker FontSize="20"
+                        Height="35"
+                        Width="200"
+                        HorizontalAlignment="Center"
+                        SelectedDate="{Binding SelectedStartDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}" Margin="56,0,55,0"/>
+
+            <Label Content="End date"
+                   HorizontalAlignment="Center"
+                   Margin="0 5 0 10"
+                   FontSize="24"/>
+
+            <DatePicker SelectedDate="{Binding SelectedEndDate,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                        Height="35"
+                        Width="200"
+                        FontSize="20" Margin="56,0,55,0"/>
+        </StackPanel>
+
+
+        <DataGrid SelectedItem="{Binding SelectedRoom,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                  ItemsSource="{Binding Rooms, Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                  Grid.Row="1"
+                  Grid.Column="1"
+                  Grid.ColumnSpan="2"
+                  Grid.RowSpan="2"
+                  Margin="23,20,20,131"
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
+                  CanUserDeleteRows="False"
+                  Name="dgHotelRooms">
             <DataGrid.Columns>
-                <DataGridTextColumn Width="*" Visibility="Hidden" Foreground="Black" Header="ID" Binding="{Binding EmployeeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <DataGridTextColumn Width="*" Foreground="Black" Header="Size" Binding="{Binding Size, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <DataGridTextColumn Width="*" Foreground="Black" Header="Price Per Night (USD)" Binding="{Binding PricePerNight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
-                <!--<DataGridTextColumn Width="*" Foreground="Black" Header="Available" Binding="{Binding IsAvailable, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />-->
-                <!--<DataGridTextColumn Width="*" Foreground="Black" Header="Available Date" Binding="{Binding AvailableDate, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, StringFormat=dd-MM-yyyy}" />-->
+                <DataGridTextColumn Width="*" Visibility="Hidden" Header="ID" Binding="{Binding EmployeeID, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Width="*" Header="Size" Binding="{Binding Size, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+                <DataGridTextColumn Width="*" Header="Price Per Night (USD)" Binding="{Binding PricePerNight, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
                 <DataGridTemplateColumn Header="Action" Width="*">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
@@ -40,6 +96,13 @@
                 </DataGridTemplateColumn>
             </DataGrid.Columns>
         </DataGrid>
+        <Label Content="Extra services"
+                   FontSize="24"
+                   HorizontalAlignment="Center"
+                   Margin="241,36,272,70" Grid.ColumnSpan="2" Grid.Column="1" Grid.Row="2" Width="148"/>
+        <ComboBox SelectedItem="{Binding SelectedExtra, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                      FontSize="24"
+                      ItemsSource="{Binding Extras, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" DisplayMemberPath="ExtraDescription" SelectedValuePath="Id" Grid.ColumnSpan="2" Grid.Column="1" Margin="157,81,221,25" Grid.Row="2"/>
 
     </Grid>
 </Window>
